<resources>
    <string name="app_name">LessonThreeIntents</string>

    <!-- Creating New Strings -->
    <string name="app_options">Click below to access a resource</string>
    <string name="ui_top_message"> What is your Intent? </string>

    <!-- Strings for each button in the MainActivity UI -->
    <string name="make_call">Make a Call / Dial</string>
    <string name="send_email">Send an Email</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="create_note">Open Google Keep (Notes)</string>
    <string name="check_list_courses"> List of Courses</string>

    <!-- Strings based on the intent-filter used for implicit intents -->
    <string name="use_action_call_dial">Use ACTION CALL / DIAL </string>
    <string name="use_action_send">Use ACTION SEND </string>
    <string name="use_action_setalarm">Use ACTION_SET_ALARM </string>
    <string name="use_action_open_notes">Use ACTION VIEW (Keep)</string>

    <!--Explicit Intent -->
    <string name="call_explicit_intent">Use Explicit Intent</string>

    <!-- Strings for the Second Activity -->
    <string name="welcome_sweng">Welcome! Software Engineering Program</string>

    <!-- Strings for the Third Activity -->
    <string name="third_activity_title">Selected Course</string>
    <string name="return_previous"> Return to SecondActivity</string>
</resources>