<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        tools:srcCompat="@mipmap/ic_alien" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ui_top_message"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dividerTop"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_options"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dividerMiddle"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textViewMakeCall"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:text="@string/make_call"/>

    <Button
        android:id="@+id/buttonMakeCall"
        android:text="@string/use_action_call_dial"
        android:layout_width="360dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewSendEmail"
        android:text="@string/send_email"
        android:layout_width="360dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonSendEmail"
        android:text="@string/use_action_send"
        android:layout_width="360dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewSetAlarm"
        android:text="@string/set_alarm"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/buttonSetAlarm"
        android:text="@string/use_action_setalarm"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
       />

    <Button
        android:id="@+id/buttonOpenFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
       />

    <View
        android:id="@+id/dividerBottom"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/checkListCourses"
        android:text="@string/check_list_courses"
        android:layout_width="360dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/buttonCheckListCourses"
        android:text="@string/call_explicit_intent"
        android:layout_width="360dp"
        android:layout_height="wrap_content" />

</LinearLayout>