<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ThirdActivity">

    <View
        android:id="@+id/dividerTop"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_sweng"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <View
        android:id="@+id/dividerMiddle"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?android:attr/listDivider" />
    <Button
        android:id="@+id/id_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_previous"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?android:attr/listDivider" />
    <TextView
        android:id="@+id/textViewCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_activity_title"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/course_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/course_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/course_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"/>

</LinearLayout>